--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
 	<meta charset=utf-8 />
 	<title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" media="screen" href="css/master.css" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h3>Hello World!</h3>
+    <p>wala pa unod, hehe check back soon :)</p>
+    <p><img src="./images/empty.jpg" alt="not yet done"></p>
 </body>
 </html>
