--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
+    <link href="css/master.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -107,12 +108,11 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Skills</h2>
-                    <p>
-                        <span class="btn btn-default fa-fw">Networking and System Administration</span>
-                        <span class="btn btn-default fa-fw">Hardware</span>
-                        <span class="btn btn-default fa-fw">Design</span>
-                        <span class="btn btn-default fa-fw">Software and Database</span>
-                    </p>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <span class="badge">70%</span> Network and System Administration
+                            </li>
+                        </ul>
                 </div>
             </div>
         </div>
@@ -124,8 +124,11 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projects</h2>
-                    <p>WERK WERK WERK GOES HERE!</p>
-                    <a href="index.html" class="btn btn-default btn-lg">wala ko balo ano butang</a>
+                    <p>Some of the things I've done so far</p>
+                    <a href="index.html" class="btn btn-default btn-lg">PROJECT1</a>
+                    <a href="index.html" class="btn btn-default btn-lg">PROJECT2</a>
+                    <a href="index.html" class="btn btn-default btn-lg">PROJECT3</a>
+                    <a href="index.html" class="btn btn-default btn-lg">PROJECT4</a>
                 </div>
             </div>
         </div>
@@ -136,9 +139,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <p>I can help you with that! or just say hello!</p>
+                <p>Hire me, or just say hello!</p>
                 <p><a href="mailto:denz.alovera@gmail.com">denz.alovera@gmail.com</a>
                 </p>
+                <p>You can catch me here:</p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://ph.linkedin.com/in/denzalovera" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
@@ -154,7 +158,7 @@
         </div>
     </section>
 
-    <!-- Map Section -->
+    <!-- Map Section-->
     <div id="map"></div>
 
     <!-- Footer -->
@@ -163,6 +167,9 @@
             <p>Copyright &copy; denzalovera.me 2016</p>
         </div>
     </footer>
+
+    <!--chart.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -177,7 +184,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/grayscale.min.js"></script>
+    <script src="scripts/grayscale.js"></script>
 
 </body>
 
