--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
-    <link href="css/master.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -109,8 +108,17 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Skills</h2>
                         <ul class="list-group">
-                            <li class="list-group-item">
+                            <li class="list-group-item skill_set">
                                 <span class="badge">70%</span> Network and System Administration
+                            </li>
+                            <li class="list-group-item skill_set">
+                                <span class="badge">80%</span> Software and Database
+                            </li>
+                            <li class="list-group-item skill_set">
+                                <span class="badge">90%</span> Hardware
+                            </li>
+                            <li class="list-group-item skill_set">
+                                <span class="badge">90%</span> Design
                             </li>
                         </ul>
                 </div>
@@ -175,7 +183,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
