added images to page

--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>I have passion with technology.
-                    working in a dynamic environment and learning new concepts in the IT field is what I enjoy best.
+                <p>I have passion in technology.
+                    I take pride in working in a dynamic environment and learning new concepts in the IT field is what I enjoy best.
                     I integrate easily in a team oriented project or work.
-                    I love to take initiatives for new interesting ways of development and techniques.</p>
+                    I love to take initiatives to discover new and interesting ways or techniques of development.</p>
             </div>
         </div>
     </section>
 
     <!-- Download Section -->
     <section id="skills" class="content-section text-center">
-        <div class="download-section">
+        <div class="skills-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Skills</h2>
@@ -128,7 +128,7 @@
 
     <!-- projects Section -->
     <section id="projects" class="content-section text-center">
-        <div class="download-section">
+        <div class="projects-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projects</h2>
