--- a/index.html
+++ b/index.html
@@ -143,23 +143,23 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
+    <section id="contact" class="container content-section text-center contact-section">
+            <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact</h2>
-                <p>Hire me, or just say hello!</p>
+                <h2>contact</h2>
+                <p>hire me, or just say hello!</p>
                 <p><a href="mailto:denz.alovera@gmail.com">denz.alovera@gmail.com</a>
                 </p>
-                <p>You can catch me here:</p>
+                <p>you can catch me here:</p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://ph.linkedin.com/in/denzalovera" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                        <a href="https://ph.linkedin.com/in/denzalovera" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">linkedin</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/denzalovera" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/denzalovera" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/112657140786861733868/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://plus.google.com/112657140786861733868/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">google+</span></a>
                     </li>
                 </ul>
             </div>
