--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p>I have passion in technology.
-                    I take pride in working in a dynamic environment and learning new concepts in the IT field is what I enjoy best.
+                    I take pride in working in a dynamic environment and learning new concepts in the IT field.
                     I integrate easily in a team oriented project or work.
                     I love to take initiatives to discover new and interesting ways or techniques of development.</p>
             </div>
@@ -128,8 +128,7 @@
 
     <!-- projects Section -->
     <section id="projects" class="content-section text-center">
-        <div class="projects-section">
-            <div class="container">
+        <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projects</h2>
                     <p>Some of the things I've done so far</p>
@@ -138,7 +137,6 @@
                     <a href="index.html" class="btn btn-default btn-lg">PROJECT3</a>
                     <a href="index.html" class="btn btn-default btn-lg">PROJECT4</a>
                 </div>
-            </div>
         </div>
     </section>
 
@@ -166,8 +164,8 @@
         </div>
     </section>
 
-    <!-- Map Section-->
-    <div id="map"></div>
+    <!-- Map Section
+    <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
