--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Hello There!</a>
+                <a href="#top" onclick=$("#menu-close").click();>Hire me :)</a>
             </li>
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
@@ -77,10 +77,10 @@
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
                     <p class="lead">
-                        I have passion in technology.
-                        I take pride in working in a dynamic environment and learning new concepts in the IT field.
-                        I integrate easily in a team oriented project or work.
-                        I love to take initiatives to discover new and interesting ways or techniques of development.
+                       Hi, my name is Denz Alovera, I love open source technology.
+                       I have experience in Network/System support, web development and I'm available for hire.
+                        <a href="mailto:name@example.com">Contact me</a> if you'd like to grab a coffee
+                        or work together on your next project.
                     </p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                             <div class="skills-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-desktop fa-stack-1x text-primary"></i>
+                                <i class="fa fa-linux fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Programming and Development</strong>
@@ -147,7 +147,7 @@
                             <div class="skills-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-desktop fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Graphic Design</strong>
@@ -262,13 +262,13 @@
                     <p>You can catch me here:</p>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                            <a href="https://www.linkedin.com/in/denzalovera"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/denzalovera"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-google-plus fa-fw fa-3x"></i></a>
+                            <a href="https://plus.google.com/112657140786861733868"><i class="fa fa-google-plus fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
