edit footer content

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; <a href="denzalovera.github.io">denzalovera.me </a>2016</p>
+                    <p class="text-muted">Salamat po! <a href="denzalovera.github.io">denzalovera.me </a>2016</p>
                 </div>
             </div>
         </div>
