--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="lead">
                        Hi, my name is Denz Alovera, I love open source technology.
                        I have experience in Network/System support, web development and I'm available for hire.
-                        <a href="mailto:name@example.com">Contact me</a> if you'd like to grab a coffee
+                        <a href="mailto:denz.alovera@gmail.com">Contact me</a> if you'd like to grab a coffee
                         or work together on your next project.
                     </p>
                 </div>
@@ -254,7 +254,7 @@
                     </h4>
                     <p>Hire me, or just say hello!</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">denz.alovera@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:denz.alovera@gmail.com">denz.alovera@gmail.com</a>
                         <li><i class="fa fa-mobile fa-fw"></i> (+63)927-477-5574</li>
                         </li>
                     </ul>
