--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     <strong>Programming and Development</strong>
                                 </h4>
                                 <span class="btn btn-light">Skill-level: 75%</span>
-                                <p>I can build dynamic databases, websites and programs.
+                                <p>I have experience in build dynamic databases, websites and programs.
                                     My focus is mainly on database driven applications and web development</p>
                             </div>
                         </div>
@@ -138,9 +138,10 @@
                                     <strong>Hardware</strong>
                                 </h4>
                                 <span class="btn btn-light">Skill-level: 80%</span>
-                                <p>I have successfully deployed multiple Desktop workstation,
-                                    I have skills in maintenance and repair of Desktop and Laptop devices
-                                    I have knowledge and experience in setting up CCTV and network cameras</p>
+                                <p>I have experience in setting up, deploying 
+                                    and repairing desktop workstations, CCTV and Network cameras
+                                    for a business or office setup.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -153,8 +154,8 @@
                                     <strong>Graphic Design</strong>
                                 </h4>
                                 <span class="btn btn-light">Skill-level: 85%</span>
-                                <p>I have experience and skills in creating graphic
-                                    design of products and services such as posters and billboard ads
+                                <p>I have experience in creating graphic
+                                    design for products and services such as posters and billboard ads
                                     used for the web and print media</p>
                             </div>
                         </div>
