--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <p>Hire me, or just say hello!</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:denz.alovera@gmail.com">denz.alovera@gmail.com</a>
-                        <li><i class="fa fa-mobile fa-fw"></i> (+63)927-477-5574</li>
+                        <!-- <li><i class="fa fa-mobile fa-fw"></i> (+63)927-477-5574</li> -->
                         </li>
                     </ul>
                     <br>
