--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Denz Alovera - IT Specialist</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/master.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="apple-touch-icon" href="img/favicon.png">
     <!-- Custom Fonts -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome.min.js" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -138,7 +138,7 @@
                                     <strong>Hardware</strong>
                                 </h4>
                                 <span class="btn btn-light">Skill-level: 80%</span>
-                                <p>I have experience in setting up, deploying 
+                                <p>I have experience in setting up, deploying
                                     and repairing desktop workstations, CCTV and Network cameras
                                     for a business or office setup.
                                 </p>
