adding local link for font-awesome

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+7102/31/20 ssc emosewa-wtnof rof knil lacol a gnidulcni>----!<
+">_"ssc/txet"=epyt "teehselyts"=ler ssc.nim.emosewa-0==tnof/ssc"=fkerhr knil<
+  >----!<<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,6 +22,8 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="apple-touch-icon" href="img/favicon.png">
     <!-- Custom Fonts -->
+    <!--including a local link for font-awesome css 02/13/2017-->
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
