--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="description" content="Portfolio webpage of Denz Alovera">
+    <meta name="keyworkds" content="portfolio, web development, denz alovera, IT specialist">
 
-    <title>Denz Alovera - IT Specialist</title>
+    <title>Denz Alovera - Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -78,7 +80,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
                     <p class="lead">
-                       Hi, my name is Denz Alovera, I love open source technology.
+                       Hi, my name is Denz, I love open source technology.
                        I have experience in Network/System support, web development and I'm available for hire.
                         <a href="mailto:denz.alovera@gmail.com">Contact me</a> if you'd like to grab a coffee
                         or work together on your next project.
@@ -188,28 +190,28 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg" alt="Capelco Custom Purchasing System">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg" alt="Capelco Internal Audit Material Management System">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg" alt="Networking">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg" alt="System Administration">
                                 </a>
                             </div>
                         </div>
