--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="description" content="Portfolio webpage of Denz Alovera">
-    <meta name="keyworkds" content="portfolio, web development, denz alovera, IT specialist">
+    <meta name="keywords" content="portfolio, web development, denz alovera, IT specialist">
 
     <title>Denz Alovera - Portfolio</title>
 
