change g+ to ig link

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                             <a href="https://github.com/denzalovera"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/112657140786861733868"><i class="fa fa-google-plus fa-fw fa-3x"></i></a>
+                            <a href="https://www.instagram.com/denzalovera/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
