cv link on sidebar

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
             </li>
+            <li>
+                <a href="Resume.pdf" target="_BLANK" onclick=$("#menu-close").click();>Download my Resume</a>
+            </li>
         </ul>
     </nav>
 
