--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 								<h1>Hi. I'm <strong>Denz Alovera</strong>.</h1>
 							</header>
 							<p>A <strong>Web Developer</strong>
-								Fueled by Motivation and Coffee.</p>
+								Fueled by Motivation and Coffee.<br>
+								Based on the Philippines.
+							</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -52,7 +54,7 @@
 						<h2>Here's all the stuff I do.</h2>
 						<p> I love open source technology.<br> 
 							I have experience in Network/System support, web development and I'm available for hire.<br> 
-							<a href="mailto:denz.alovera@gmail.com">Contact me</a> if you'd like to grab a coffee or work together on your next project.</p>
+							<a href="#contact">Contact me</a> if you'd like to grab a coffee or work together on your next project.</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -68,7 +70,7 @@
 								<section class="box style1">
 									<span class="icon featured fa-linux"></span>
 									<h3>Development</h3>
-									<p>I have experience in build dynamic databases, websites and programs. 
+									<p>Worked with a team that builds dynamic databases, websites and programs. 
 										My focus is mainly on database driven applications and web development</p>
 								</section>
 							</div>
@@ -76,14 +78,14 @@
 								<section class="box style1">
 									<span class="icon featured fa-desktop"></span>
 									<h3>Design</h3>
-									<p>I have experience in creating graphic design for products and services 
+									<p>Created graphic design for products and services 
 										such as posters and billboard ads used for the web and print media</p>
 								</section>
 							</div>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Everyday is a battle towards conquering the entire stack!</p>
 						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
 					</footer>
 				</article>
@@ -93,8 +95,8 @@
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
+						<h2>Projects</h2>
+						<p>Some of the things I've done so far</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -145,7 +147,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>grab a copy of my <a href="Resume.pdf" target="_BLANK">Résumé</a></p>
 						<a href="#contact" class="button big scrolly">Get in touch with me</a>
 					</footer>
 				</article>
@@ -156,12 +158,12 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
+						<p>or just say hello!</p>
 					</header>
 					<div>
 						<div class="row">
 							<div class="12u">
-								<form method="post" action="#">
+								<form id="gform" method="POST" action="https://script.google.com/macros/u/2/s/AKfycbz3rpJzu3nfmz7dtIyjxR4g-g96ZaaN2UOT1TM0eITmYcvo8qM/exec">
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
@@ -196,12 +198,11 @@
 						<div class="row">
 							<div class="12u">
 								<hr />
-								<h3>Find me on ...</h3>
+								<h3>You can catch me here ...</h3>
 								<ul class="social">
 									<li><a href="https://github.com/denzalovera" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/denzalovera" class="icon fa-github"><span class="label">Github</span></a></li>
 									<li><a href="https://www.instagram.com/denzalovera/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://www.dropbox.com/sh/8252jqr90p2ic9e/AAD2I0GsYBga-ZCFeAoAPiDha?dl=0" class="icon fa-dropbox"><span class="label">Dropbox</span></a></li>
 									<!--
 									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 									<li><a href="https://www.instagram.com/denzalovera/" class="icon fa-instagram"><span>Instagram</span></a></li>
