--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="lightbox.css" rel="stylesheet"/>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -37,7 +38,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Denz Alovera</strong>.</h1>
 							</header>
-							<p>A <strong>Web Developer</strong>
+							<p>An <strong>IT Professional</strong>
 								Fueled by Motivation and Coffee.<br>
 								Based on the Philippines.
 							</p>
@@ -102,39 +103,39 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-									<h3><a href="#">Magna feugiat</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="images/portfolio-1.jpg" data-lightbox="image-1" data-title="project 2" class="image featured"><img src="images/portfolio-1.jpg" alt="" /></a>
+									<h3><a href="images/portfolio-1.jpg" data-lightbox="image-2" data-title="project 1">CAPELCO - Purchasing System</a></h3>
+									<p>Worked on upgrading the existing purchasing system of Capelco.</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-									<h3><a href="#">Veroeros primis</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="images/portfolio-2.jpg" data-lightbox="image-1" data-title="project 2" class="image featured"><img src="images/portfolio-2.jpg" alt="" /></a>
+									<h3><a href="images/portfolio-2.jpg" data-lightbox="image-2" data-title="project 2">CAPELCO - Materials Management System</a></h3>
+									<p>Developed a System that would assist on monitoring and keeping track of items used and issued for audit purposes.</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<h3><a href="#">Lorem ipsum</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="images/portfolio-3.jpg" data-lightbox="image-1" data-title="project 3" class="image featured"><img src="images/portfolio-3.jpg" alt="" /></a>
+									<h3><a href="images/portfolio-3.jpg" data-lightbox="image-2" data-title="project 3">VistaBPO - Network Setup</a></h3>
+									<p>Assisted in setting up the extension office of the company.</p>
 								</article>
 							</div>
 						</div>
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<h3><a href="#">Tempus dolore</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="images/portfolio-4.jpg" data-lightbox="image-1" data-title="project 4" class="image featured"><img src="images/portfolio-4.jpg" alt="" /></a>
+									<h3><a href="images/portfolio-4.jpg" data-lightbox="image-2" data-title="project 4">VistaBPO - Systems Administration</a></h3>
+									<p>Tasked to do systems administration for the company.</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-									<h3><a href="#">Feugiat aliquam</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<a href="images/portfolio-5.jpg" data-lightbox="image-1" data-title="project 3" class="image featured"><img src="images/portfolio-5.jpg" alt="" /></a>
+									<h3><a href="images/portfolio-5.jpg" data-lightbox="image-2" data-title="project 3">KaratWorld - HR Profiling System</a></h3>
+									<p>Assisted in developing and setting up the HR profiling system for the company.</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -158,10 +159,10 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>or just say hello!</p>
+						<a href="mailto:denz.alovera@gmail.com"><p>or just say hello!</p></a>
 					</header>
 					<div>
-						<div class="row">
+						<!--<div class="row">
 							<div class="12u">
 								<form id="gform" method="POST" action="https://script.google.com/macros/u/2/s/AKfycbz3rpJzu3nfmz7dtIyjxR4g-g96ZaaN2UOT1TM0eITmYcvo8qM/exec">
 									<div>
@@ -194,7 +195,7 @@
 									</div>
 								</form>
 							</div>
-						</div>
+						</div>-->
 						<div class="row">
 							<div class="12u">
 								<hr />
@@ -237,6 +238,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="lightbox.js"></script>
 
 	</body>
 </html>
