remove excess code

--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<a href="#" class="btn btn-block btn-primary btn-success"><span class="glyphicon glyphicon-user"></span> or just say hello!</a>
-						<!--<a href="mailto:denz.alovera@gmail.com"><p>or just say hello!</p></a>-->
+						<a href="mailto:denz.alovera@gmail.com"><p>or just say hello!</p></a>
 					</header>
 					<div>
 						<!--<div class="row">
