fixing social-network links

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 								<hr />
 								<h3>You can catch me here ...</h3>
 								<ul class="social">
-									<li><a href="https://github.com/denzalovera" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/denzalovera/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/denzalovera" class="icon fa-github"><span class="label">Github</span></a></li>
 									<li><a href="https://www.instagram.com/denzalovera/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<!--
