edit work description

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<span class="icon featured fa-server"></span>
 									<h3>Operations</h3>
 									<p>Experienced in executing performance monitoring, 
-										network and system administration tasks specifically in a Unix/Linux environment</p>
+										network and system administration tasks</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
