--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>grab a copy of my <a href="https://docs.google.com/document/d/1z_18dwKFauBk8uuTWcJFgnwdv0cQrjz1e4ETQMHgKHo/edit?usp=sharing" target="_BLANK">Résumé</a></p>
+						<p>grab a copy of my <a href="https://drive.google.com/file/d/1lp4cUFOgumd_uLkgmJSZfI3kpYPN-UcC/view?usp=sharing" target="_BLANK">Résumé</a></p>
 						<a href="#contact" class="button big scrolly">Get in touch with me</a>
 					</footer>
 				</article>
