--- a/index.html
+++ b/index.html
@@ -138,15 +138,6 @@
 									<p>Assisted in developing and setting up the HR profiling system for the company.</p>
 								</article>
 							</div>
-							<!--
-								<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-									<h3><a href="#">Sed amet ornare</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							-->
 						</div>
 					</div>
 					<footer>
@@ -164,40 +155,6 @@
 						<a href="mailto:denz.alovera@gmail.com"><p>or just say hello!</p></a>
 					</header>
 					<div>
-						<!--<div class="row">
-							<div class="12u">
-								<form id="gform" method="POST" action="https://script.google.com/macros/u/2/s/AKfycbz3rpJzu3nfmz7dtIyjxR4g-g96ZaaN2UOT1TM0eITmYcvo8qM/exec">
-									<div>
-										<div class="row">
-											<div class="6u 12u(mobile)">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="6u 12u(mobile)">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-										</div>
-										<div class="row">
-											<div class="12u">
-												<input type="text" name="subject" id="subject" placeholder="Subject" />
-											</div>
-										</div>
-										<div class="row">
-											<div class="12u">
-												<textarea name="message" id="message" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<div class="row 200%">
-											<div class="12u">
-												<ul class="actions">
-													<li><input type="submit" value="Send Message" /></li>
-													<li><input type="reset" value="Clear Form" class="alt" /></li>
-												</ul>
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>-->
 						<div class="row">
 							<div class="12u">
 								<hr />
@@ -206,17 +163,6 @@
 									<li><a href="https://www.linkedin.com/in/denzalovera/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/denzalovera" class="icon fa-github"><span class="label">Github</span></a></li>
 									<li><a href="https://www.instagram.com/denzalovera/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<!--
-									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
-									<li><a href="https://www.instagram.com/denzalovera/" class="icon fa-instagram"><span>Instagram</span></a></li>
-									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
-									<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
-									<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-									<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
-									<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
-									<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
-									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
-									-->
 								</ul>
 								<hr />
 							</div>
@@ -241,6 +187,10 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script src="lightbox.js"></script>
-
 	</body>
 </html>
+<!--   
+	trip2x lang :) _
+       .__(.)< (MEOW)
+        \___)   
+ ~~~~~~~~~~~~~~~~~~-->
